--- a/src/scss/media_queries.scss
+++ b/src/scss/media_queries.scss
@@ -10,6 +10,10 @@
         width: 100vw;
         background-color: $dark-color;
         overflow-x: hidden;
+
+        &.hidden {
+            width: 0;
+        }
     }
 
     .intro__slide {
